Added planet name labels

--- a/main.css
+++ b/main.css
@@ -52,3 +52,11 @@ a, button, input, select {
 	user-select: none;
 	z-index: 2 !important; /* TODO Solve this in HTML */
 }
+
+.label {
+	color: #FFF;
+	font-family: sans-serif;
+	padding: 2px;
+	background: rgba( 0, 0, 0, .6 );
+	z-index: 3 !important;
+}
