--- a/main.css
+++ b/main.css
@@ -65,5 +65,6 @@ a, button, input, select {
 	bottom: 0%;
     position: absolute;
     margin-left: 20px;
-    margin-bottom: 20px;
+	margin-bottom: 20px;
+	display: none;
 }
